H6_8 deel 2 oef 3 domein klaar

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /.metadata/
+/.gitignore
+/VoorbeeldCode + voorbereiding deelexamen/
+/testFiles/
+/WS_linux/
+/Untitled.epf
+/output/
+/.metadata/
+/.idea/
